--- a/ppvt/styles.css
+++ b/ppvt/styles.css
@@ -14,7 +14,13 @@
     width: 80%;  
     height: auto;  
     margin-bottom: 20px;  
-}  
+}
+
+#image-container {  
+    width: 80%;  
+    height: auto;  
+    margin-bottom: 20px;  
+} 
   
 .choice {  
     width: 20%;  
