--- a/ppvt/styles.css
+++ b/ppvt/styles.css
@@ -13,7 +13,8 @@
 #question-image {  
     width: 80%;  
     height: auto;  
-    margin-bottom: 20px;  
+    margin-bottom: 20px;
+    align-items: center;
 }
 
 #image-container {  
