--- a/crt/styles.css
+++ b/crt/styles.css
@@ -22,6 +22,12 @@
     margin-bottom: 20px;
     align-items: center;
 } 
+
+#Answer-image {  
+    width: 80%;  
+    height: auto;  
+    object-fit: contain;
+} 
   
 .choice {  
     width: 20%;  
