--- a/crt/styles.css
+++ b/crt/styles.css
@@ -58,3 +58,10 @@
     right: 10px;  
     font-size: 20px;  
 }
+
+#personalInfoForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
