--- a/ppvt/styles.css
+++ b/ppvt/styles.css
@@ -45,3 +45,9 @@
     right: 10px;  
     font-size: 20px;  
 }
+#personalInfoForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
